--- a/plutus-book/doc/03-UTXO.adoc
+++ b/plutus-book/doc/03-UTXO.adoc
@@ -1,5 +1,5 @@
 [#03-UTXO]
-= UTXO Style Accounting
+= UTxO Style Accounting
 
 In order to become proficient with all things Plutus, it is
 inevitable that you must first acquire a solid understanding of how
@@ -8,16 +8,16 @@ accounting is done on the Cardano platform.
 We traditionally think of money transfers as being between two bank accounts,
 or perhaps internet addresses in the case of digital currency. The Cardano platform,
 like a number of other cryptocurrency platforms such as Bitcoin, uses instead
-an accounting approach known as UTXO-style. A full formal description of
+an accounting approach known as UTxO-style. A full formal description of
 this type of accounting can be found as part of the Cardano ledger
 formal specification, see <<endmatter#deleg>>.
 
-UTXO-style accounting documents the flow of money not from account to account,
+UTxO-style accounting documents the flow of money not from account to account,
 but rather from transaction to transaction. Each transaction has inputs
 (where the money being spent is coming from), and outputs
 (where this money is going). Note that the body of a transaction may also
 contain other data, as we will see later when we examine the extended
-UTXO model in the <<09-extended#09-extended>> chapter.
+UTxO model in the <<09-extended#09-extended>> chapter.
 
 Consider the data flow graph below, <<tx-flow>>. The black lines represent unspent outputs
 of transactions, and the red lines represent these outputs being used as inputs
@@ -47,8 +47,8 @@ only one output of 2 Ada, and Alice, a total of 58 Ada in unspent outputs
 from other transactions.
 
 [#tx-flow]
-.UTXO Funds Flow Example
-image::UTXO_pic.png[]
+.UTxO Funds Flow Example
+image::UTxO_pic.png[]
 
 The above model is strictly showing the flow of currency between several
 participants. In this simplified version, the transactions illustrated are not
@@ -64,7 +64,7 @@ example above, our new transaction removes (i.e. uses as inputs) unspent outputs
 Note here that Bob had both an unspent output used by this transaction and
 an unspent output produced by this transaction. That is, he got, so to say,
 change (of 2 Ada) from this transaction. Since there is no true way to spend
-part of an output, this is how UTXO accounting deals with partial spending -
+part of an output, this is how UTxO accounting deals with partial spending -
 by adding a "change" output.
 
 Notice here that this style of accounting makes it convenient, if not intuitive,
@@ -72,18 +72,18 @@ to distribute the flow of cash from several contributors to several recipients b
 having it flow into a common pot, i.e. the transaction, before being sent to
 the intended payees.
 This is, in a very general sense, the goal of smart contracts.
-Let us explore what is going on during the processing of a UTXO transaction event more formally.
+Let us explore what is going on during the processing of a UTxO transaction event more formally.
 For the basic transaction
 model we discuss here, refer to <<utxo-definitions>>.
 
 [#utxo-definitions]
-.Basic UTXO definitions
-image::UTXO.png[]
+.Basic UTxO definitions
+image::UTxO.png[]
 
 Before we examine the structure of transactions, let us look at how book keeping
 is done on the ledger. The record on the ledger that
-contains this information is called a UTXO, short of Unspent Transaction Outputs
-and denoted `UTXO` in the figure.
+contains this information is called a UTxO, short of Unspent Transaction Outputs
+and denoted `UTxO` in the figure.
 This record is a finite map, where the key is a pair of transaction ID and
 an index, `TxIn = TxId * Ix`. The transaction ID `TxId`
  can be calculated from a complete transaction
@@ -91,7 +91,7 @@ submitted for processing, and is a unique identifier of this transaction.
 The index `Ix` is necessary because there may be more than one output,
 and each must have a unique identifier within the set of outputs
 of a given transaction.
-The values in the UTXO finite map are pairs of a coin value and an
+The values in the UTxO finite map are pairs of a coin value and an
 address, whose type is `TxOut = Addr * Coin`.
 Note that users' addresses are always public keys, and the funds at them
 belong to the entity who is able to prove that they possess the corresponding
@@ -105,33 +105,33 @@ The keys of the finite map are distinct index values within the context
 of the finite map, such that the
 combination of a transaction ID and an index will be a globally unique
 identifier for the output of a transaction.
-In the UTXO accounting scheme, we relate
+In the UTxO accounting scheme, we relate
 output values to the inputs from which they come by means of this composite
 global identifier.
 
 The inputs, whose order does not matter, are a set and not a list.
 The elements of this set contain neither
 a coin value to be spent, nor the address which the money is coming from.
-This is the main distinction between traditional accounting and UTXO accounting:
+This is the main distinction between traditional accounting and UTxO accounting:
 the money being spent is only referred to by the unspent outputs of
 previously processed transactions on the ledger that reside currently on the blockchain.
 Each element of the input sets is a pair of a transaction ID and an index,
-which, as explained above, uniquely identifies the unspent output in the UTXO
+which, as explained above, uniquely identifies the unspent output in the UTxO
 that is to be spent.
 
-Processing a transaction involves updating the UTXO on the ledger in a way
+Processing a transaction involves updating the UTxO on the ledger in a way
 that makes the funds spent by the transaction being processed available to
 be spent by the owners of the addresses listed in the outputs. That is,
 all the entries corresponding to the inputs of the processed transaction are
-removed from the ledger UTXO.
+removed from the ledger UTxO.
 
 Additionally, all the `TxOut` values in
-the finite map of the outputs of the transaction are added to the UTXO,
+the finite map of the outputs of the transaction are added to the UTxO,
 with the key of the finite map consisting of the ID of the transaction being processed,
 and the index value the same as in the finite map of outputs of this transaction.
 That is, if `tx` contains a pair of a set of inputs and a finite map
 of outputs `(ins, outs)` with ID `id`, and
-`ix |-> (a,c)` is an entry in `outs`, the UTXO will
+`ix |-> (a,c)` is an entry in `outs`, the UTxO will
 have the entry `(id, ix) |-> (a,c)` added. Here, we use the notation `k |-> v`
 to refer to an entry in a finite map which has the key `k` and the value `v`.
 
@@ -139,22 +139,22 @@ Now, we would like to capture this update concisely in terms of mathematical
 notation (which is rather human-readable), but can be translated directly into
 code. We will adhere to the use of this notation in our explanation of
 the inclusion of Plutus Tx scrips inside transactions as well. The following
-definitions are three ways to filter a UTXO finite map. The first one is
-filtering the UTXO by a subset `ins` of the keys. The second filter
-gives the compliment of the result of the first filter (i.e. all the UTXO
+definitions are three ways to filter a UTxO finite map. The first one is
+filtering the UTxO by a subset `ins` of the keys. The second filter
+gives the compliment of the result of the first filter (i.e. all the UTxO
 entries not indexed by keys in the list of inputs). The third filter
-filters UTXO entries by the values.
+filters UTxO entries by the values.
 
 image::restrnotation.png[]
 
 We would like to use this notation to process a new transaction. That is,
 remove the spent outputs, and build the
-set of new outputs a transaction is adding to the UTXO (as we described above).
+set of new outputs a transaction is adding to the UTxO (as we described above).
 We may compute the outputs as follows:
 
 image::outputs.png[]
 
-Using this notation, we can define the UTXO update due to a transaction
+Using this notation, we can define the UTxO update due to a transaction
 `tx` as follows:
 
 image::utxoupd.png[]
@@ -162,7 +162,7 @@ image::utxoupd.png[]
 Note that an explicit calculation of the total amount of Ada in the outputs and
 the total Ada in all the inputs of a transaction must be performed as part of
 validating a transaction. There are destinations for the Ada being spent in the inputs
-besides being added as UTXO entries. The main one is the treasury, which is kept
+besides being added as UTxO entries. The main one is the treasury, which is kept
 track of as a value on the ledger. Transaction fees and
 deposits are paid into the treasury, for example. There could also be output entries
 in a transaction without
@@ -173,13 +173,17 @@ Now, in order to validate a transaction, there are a number of
 calculations performed involving the Ada in the transaction and the Ada
 in other accounts on the ledger to make sure Ada is neither created nor destroyed,
 so to say. This is known as the _generalized accounting property_.
-The UTXO accounting scheme provides built-in protection against double spending
+The UTxO accounting scheme provides built-in protection against double spending
 of a given output.
 This inherent protection, together with the enforcement of the generalized
 accounting property,
 ensures that no dishonest spending is allowed to occur. This is a crucial property
 of the Cardano ledger bookkeeping system, in particular because there is a
-set amount of Ada in existence, which can never change.
+set amount of Ada in existence, which can never change. Note that _not all_
+Ada in existence is in circulation at all times. Much of it is stored as
+_reserves_, and slowly enters circulation through the process of awarding
+monetary rewards to stake holders over time.
+The interested reader can look up the details of this process in <<endmatter#deleg>>.
 
 Note also that a transaction includes a host of other data, such as
 witnesses, certificates, and scripts along with their hashes.
